--- a/contact.html
+++ b/contact.html
@@ -29,26 +29,42 @@
         </div>
       </nav>
 
-      <div class="container">
-        <h1>Contact</h1>
-        <hr>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-8">
+        
+            <h1>Contact</h1>
+            <hr>
 
-        <form>
-          <div class="form-group">
-            <label for="imputName">Name</label>
-            <input type="Name" class="form-control" id="imputName">
+            <form>
+              <div class="form-group">
+                <label for="imputName">Name</label>
+                <input type="Name" class="form-control" id="imputName">
+              </div>
+
+              <div class="form-group">
+                <label for="InputEmail1">Email address</label>
+                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" aria-label="With textarea"></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
           </div>
-          <div class="form-group">
-            <label for="InputEmail1">Email address</label>
-            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
-          </div>
-
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
+      </div>
     </div>
 
-      
+    <footer class="footer">
+      <h2>Copyright</h2>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </body>
 </html>
