--- a/contact.html
+++ b/contact.html
@@ -29,34 +29,45 @@
         </div>
       </nav>
 
-    <div class="container">
+    <main class="container-main">
         <div class="row">
-          <div class="col-sm-8">
-        
-            <h1>Contact</h1>
-            <hr>
+            <div class="col-md-8">
 
-            <form>
-              <div class="form-group">
-                <label for="imputName">Name</label>
-                <input type="Name" class="form-control" id="imputName">
-              </div>
+              <div class="container">
+                  <div class="row">
+                      <div class="col-sm-12">
+                        <h1>Contact</h1>
+                        <hr>
+                      </div>
+                  </div>
 
-              <div class="form-group">
-                <label for="InputEmail1">Email address</label>
-                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
-              </div>
+                  <div class="row">
+                  <div class="col-sm-10">
+                    <form>
+                      <div class="form-group">
+                        <label for="imputName">Name</label>
+                        <input type="Name" class="form-control" id="imputName">
+                      </div>
 
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-              </div>
+                      <div class="form-group">
+                        <label for="InputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+                      </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                      <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea rows="4" class="form-control" aria-label="With textarea"></textarea>
+                      </div>
+                    </div>
+                  </div>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+             
+            </div>
           </div>
-      </div>
-    </div>
+        </div>
+      </main>
 
     <footer class="footer">
       <h2>Copyright</h2>
