functional pages incorrect color

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,35 +29,46 @@
         </div>
     </nav>
 
-    <main class="container-main">
-        <div class="row">
-            <div class="col-md-8">
+    <div class="background">
+            
+        <main class="container-main">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-8">
 
-              <div class="container">
-                  <div class="row">
-                      <div class="col-sm-12">
-                        <h1>Portfolio</h1>
-                        <hr>
-                      </div>
-                  </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <h1>Portfolio</h1>
+                                <hr>
+                            </div>
+                        </div>
 
-                  <div class="row">
-                  <div class="col-sm-8">
-                    <img class="placeholder" src="https://via.placeholder.com/300" alt="placeholder image">
-                    <img class="placeholder" src="https://via.placeholder.com/300" alt="placeholder image">
-                    <img class="placeholder" src="https://via.placeholder.com/300" alt="placeholder image">
-                    <img class="placeholder" src="https://via.placeholder.com/300" alt="placeholder image">
-                    <img class="placeholder" src="https://via.placeholder.com/300" alt="placeholder image">
+                        <div class="row">
+                            <div class="col-12 col-md-12 col-lg-6">
+                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
+                            </div>
+                            <div class="col-12 col-md-12 col-lg-6">
+                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
+                            </div>
+                            <div class="col-12 col-md-12 col-lg-6">
+                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
+                            </div>
+                            <div class="col-12 col-md-12 col-lg-6">
+                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
+                            </div>
+                            <div class="col-12 col-md-12 col-lg-6">
+                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+         </main>
+    </div>
 
-
-                   
-            </div>
-          </div>
-        </div>
-      </main>
 
     <footer class="footer">
-      <h2>Copyright</h2>
+      <h2>&#169; Copyright</h2>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
