--- a/portfolio.html
+++ b/portfolio.html
@@ -31,39 +31,39 @@
 
     <div class="background">
             
-        <main class="container-main">
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-8">
-
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12">
-                                <h1>Portfolio</h1>
-                                <hr>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <img class="placeholder" src="https://via.placeholder.com/350" alt="placeholder image">
-                            </div>
-                        </div>
+        <div class="container ml-1">
+            <div class="row ml-1">
+              <div class="col-md-8">
+                <div class=" card">
+                  <div class="card-body">
+                    <h1>portfolio</h1>
+                    <hr />
+                    <div class="row">
+                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
+                      </div>
+                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
+                      </div>
                     </div>
+                    <div class="row">
+                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
+                      </div>
+                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-12 col-md-8 col-lg-6 mb-4">
+                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
+                      </div>
+                    </div>
+                  </div>
                 </div>
-            </div>    
-         </main>
+              </div>
+            </div>
+          </div>
     </div>
 
 
@@ -71,9 +71,14 @@
       <h2>&#169; Copyright</h2>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 </html>
