finish homework assignment

--- a/index.html
+++ b/index.html
@@ -1,64 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>About Sam Rodriguez</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-      <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Sam Rodriguez</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-              </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">About</a>
-              </li>
-            </ul>
-          </div>
-      </nav>
-
-      <div class="background">
-    
-          <main class="container-main">
-              <div class="row">
-                  <div class="col-sm-12 col-md-8 col-lg-8">
-
-                      <div class="container">
-                          <div class="row">
-                              <div class="col-12">
-                                  <h1>About Me</h1>
-                                  <hr>
-                                  <img src="https://via.placeholder.com/350" alt="Picture of Sam Rodriguez" class="float-left">
-                                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, sed deserunt. Beatae ea perspiciatis, commodi eius nostrum facilis a optio sit, nobis similique ut architecto veniam fugiat neque nihil illo! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo odio sint maiores similique ipsam iure cupiditate beatae porro. Molestiae, eaque facilis ducimus alias similique earum at nam asperiores quam.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nulla itaque iusto, maxime earum numquam facilis esse ab aspernatur voluptates rerum unde, suscipit alias saepe error veniam id voluptatem voluptate?</p>
-                                  <br>
-                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus perspiciatis cupiditate consequatur, iusto rerum voluptas temporibus? Nihil rerum id dolores, sapiente necessitatibus, distinctio ipsam tempore accusantium, magni fugiat repellat at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quibusdam nihil maxime voluptatibus eveniet cum est dolore modi, mollitia necessitatibus iste possimus id optio debitis molestiae animi amet blanditiis illum.</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>    
-          </main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html"
+              >Contact <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
       </div>
-     
+    </nav>
+
+    <div class="container ml-1">
+      <div class="row ml-1">
+        <main class="col-md-8">
+          <div class="card">
+            <div class="card-body">
+              <h1>About me</h1>
+              <hr />
+              <img
+                class="aboutme float-left img-fluid port-image"
+                src="https://via.placeholder.com/350"
+                alt="self photo"
+                style="margin-right: 10px"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Viverra nibh cras pulvinar mattis nunc sed blandit libero.
+                Faucibus in ornare quam viverra. At auctor urna nunc id. Risus
+                feugiat in ante metus dictum at tempor. Viverra mauris in
+                aliquam sem fringilla. Augue ut lectus arcu bibendum at.
+                Sagittis eu volutpat odio facilisis mauris sit amet massa. Lorem
+                ipsum dolor sit amet consectetur adipiscing. In hac habitasse
+                platea dictumst quisque. Pellentesque nec nam aliquam sem et
+                tortor consequat. Sed arcu non odio euismod. Gravida neque
+                convallis a cras semper auctor neque vitae tempus. Varius morbi
+                enim nunc faucibus a pellentesque sit amet. Pellentesque
+                dignissim enim sit amet venenatis urna cursus eget. Eu augue ut
+                lectus arcu bibendum at varius. Tortor dignissim convallis
+                aenean et tortor at. Est ante in nibh mauris cursus mattis.
+              </p>
+              <p>
+                Mollis nunc sed id semper risus in. Non arcu risus quis varius
+                quam quisque. Nec dui nunc mattis enim ut tellus elementum
+                sagittis vitae. Varius quam quisque id diam vel quam elementum
+                pulvinar. Luctus accumsan tortor posuere ac ut consequat semper
+                viverra nam. Ut ornare lectus sit amet est placerat. Sit amet
+                volutpat consequat mauris nunc congue nisi vitae suscipit. Massa
+                tincidunt dui ut ornare. Ac auctor augue mauris augue neque.
+                Fermentum dui faucibus in ornare quam viverra orci. Praesent
+                semper feugiat nibh sed pulvinar. Tellus in metus vulputate eu
+                scelerisque felis imperdiet proin. Vel fringilla est ullamcorper
+                eget nulla facilisi etiam dignissim. Netus et malesuada fames ac
+                turpis egestas integer eget aliquet. Pretium vulputate sapien
+                nec sagittis aliquam malesuada bibendum.
+              </p>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+
     <footer class="footer">
       <h2>&#169; Copyright</h2>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
