--- a/portfolio.html
+++ b/portfolio.html
@@ -1,84 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html"
+              >Contact <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <div class="background">
-            
-        <div class="container ml-1">
-            <div class="row ml-1">
-              <div class="col-md-8">
-                <div class=" card">
-                  <div class="card-body">
-                    <h1>portfolio</h1>
-                    <hr />
-                    <div class="row">
-                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
-                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
-                      </div>
-                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
-                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
-                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
-                      </div>
-                      <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
-                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-12 col-md-8 col-lg-6 mb-4">
-                        <img src="https://via.placeholder.com/350" class="img-fluid port-image" alt="portfolio image" />
-                      </div>
-                    </div>
+      <div class="container ml-1">
+        <div class="row ml-1">
+          <div class="col-md-8">
+            <div class="card">
+              <div class="card-body">
+                <h1>Portfolio</h1>
+                <hr />
+                <div class="row">
+                  <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                    <img
+                      src="https://via.placeholder.com/350"
+                      class="img-fluid port-image"
+                      alt="portfolio image"
+                    />
+                  </div>
+                  <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                    <img
+                      src="https://via.placeholder.com/350"
+                      class="img-fluid port-image"
+                      alt="portfolio image"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                    <img
+                      src="https://via.placeholder.com/350"
+                      class="img-fluid port-image"
+                      alt="portfolio image"
+                    />
+                  </div>
+                  <div class="col-sm-12 col-md-10 col-lg-6 mb-4">
+                    <img
+                      src="https://via.placeholder.com/350"
+                      class="img-fluid port-image"
+                      alt="portfolio image"
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 col-md-8 col-lg-6 mb-4">
+                    <img
+                      src="https://via.placeholder.com/350"
+                      class="img-fluid port-image"
+                      alt="portfolio image"
+                    />
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
     </div>
-
 
     <footer class="footer">
       <h2>&#169; Copyright</h2>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-  </script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
